k8s/test/ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: test.conure.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myservice2
                port:
                  number: 8001
